--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,7 @@ qt_add_qml_module(appProject_1
     URI Project_1
     VERSION 1.0
     QML_FILES Main.qml
+    MainView.qml
 )
 
 # Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
